# catedral-api

./: .env.example  .gitignore  TROUBLESHOOTING-504.md  add_ativo_columns.py  add_hierarchy_convite.py  ajustar_schema.py  audit_data.py  backup_celulas_20260302_002850.json  backup_celulas_20260315_083407.json  check_coords.py  check_db_visibility.py  check_dupes.py  check_exact_role.py  check_hierarchy.py  check_hierarchy_db.py  check_ides.py  check_ids.py  check_jessica_cells.py  check_jessica_hierarchy.py  check_login_role.py  check_membro_roles.py  check_nucleos.py  check_role.py  check_roles.py  check_routes.py  check_subscriptions.py  check_token.py  check_token_new.py  check_user_role.py  check_vinculo.py  check_visitor_hierarchy.py  clean_membro.py  clear_db.py  config.py  consolidate.py  convert_ico.py  create_user.py  criar_admin.py  debug_admin_cells.py  debug_chart_colors.py  (+83 more)
app/: __init__.py  auth.py  decorators.py  models.py  routes.py  scopes.py
app/api/: __init__.py  celulas.py  eventos.py  frequencias.py  ides.py  inscricoes.py  lideranca_frequencia.py  membros.py  noticias.py  notificacoes.py  nucleos.py  projetos.py  solicitacoes.py
migrations/versions/: 02801ab9de76_added_target_ide_and_supervisor_to_.py  0571a0697825_initial_migration.py  066d39a27178_added_pushmessage.py  0bb2d7a81c92_add_pastor_id_to_ide.py  0dd1cffb716f_add_requer_troca_senha_to_user.py  124a143e6a5b_add_is_batismo_to_evento.py  21dd7fa93b6e_add_evento_model.py  (+7 more)
tests/: conftest.py  test_api_membros.py  test_auth.py  test_models.py  test_permissions.py
